# TCAS

./: .gitignore  README.md
box_bot_description/launch/: multi_spawn_robot_launch.py
box_bot_description/params/: number_of_robots.yaml
box_bot_description/robot/: box_bot_v2.urdf
box_bot_gazebo/launch/: start_world_launch.py
box_bot_gazebo/worlds/: box_bot_empty.world  box_bot_empty_1.world  box_bot_two_lanes.world  turtlebot3_world.world
install/: local_setup.sh  setup.sh
install/box_bot_description/share/box_bot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/box_bot_description/share/box_bot_description/cmake/: box_bot_descriptionConfig-version.cmake  box_bot_descriptionConfig.cmake
install/box_bot_description/share/box_bot_description/environment/: ament_prefix_path.dsv  path.dsv
install/box_bot_description/share/box_bot_description/launch/: multi_spawn_robot_launch.py  multi_spawn_robot_v3.launch.py  spawn_box_bot.py  spawn_box_bot_launch.py  spawn_box_bot_v2.py  spawn_robot_launch.py
install/box_bot_description/share/box_bot_description/robot/: box_bot.gazebo  box_bot.urdf  box_bot.xacro  box_bot_body.xacro  box_bot_propeller.xacro  box_bot_v2.urdf  caster_wheels.xacro  macros.xacro  materials.xacro  properties.xacro  turtlebot_burger.urdf  wheels.xacro
install/box_bot_gazebo/share/box_bot_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/box_bot_gazebo/share/box_bot_gazebo/cmake/: box_bot_gazeboConfig-version.cmake  (+1 more)
install/box_bot_planning/share/box_bot_planning/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/box_bot_tutorials/share/box_bot_tutorials/: local_setup.sh  package.sh
install/planning/share/planning/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
log/: latest_build
planning/: CMakeLists.txt  package.xml
planning/include/: Astar.h  CBS.h  Neighbor.h  PlanResult.h  Planner.h  TestROS2.h
planning/launch/: planner_cpp_launch.py
planning/launch/params/: cbs_output.yaml
planning/map/: my_map.pgm
planning/params/: cbs_input.yaml  cbs_output.yaml  custom_goals.yaml  custom_obstacles.yaml  input.yaml  output.yaml
planning/scripts/: cbs.py  planner.py  talker.py
planning/scripts/params/: cbs_input.yaml  cbs_input_cpp.yaml  cbs_input_two_lanes.yaml  cbs_output.yaml  custom_goals.yaml  custom_obstacles.yaml
planning/share/planning/: local_setup.sh  package.sh  package.xml
planning/share/planning/launch/: box_bot_plan_talker_launch.py
planning/src/: Astar.cc  CBS.cc  Planner.cc  Planner_old.cc  TestROS2.cc
(+23 files in other folders)
